Updated Site with details
Change template

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Stylish Portfolio - Start Bootstrap Template</title>
+    <title>Souradeepta Biswas</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,14 +40,14 @@
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#about">About</a>
         </li>
-        <li class="sidebar-nav-item">
+       <!-- <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#services">Services</a>
-        </li>
+        </li>-->
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#contact">Contact</a>
+          <a class="js-scroll-trigger" href="#footer">Contact</a>
         </li>
       </ul>
     </nav>
@@ -55,11 +55,11 @@
     <!-- Header -->
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
-        <h1 class="mb-1">Stylish Portfolio</h1>
+        <h1 class="mb-1">Souradeepta Biswas</h1>
         <h3 class="mb-5">
-          <em>A Free Bootstrap Theme by Start Bootstrap</em>
+          <em>Currently pursuing masters degree in Computer Science at Syracuse University</em>
         </h3>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">More about me</a>
       </div>
       <div class="overlay"></div>
     </header>
@@ -69,16 +69,51 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-            <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
+            <h2>Grad Life</h2>
+            <p class="lead mb-5">I am currently pursing a Masters degree in Computer Science from <a href="https://www.syracuse.edu/">Syracuse University</a>.
+			</br>I am specializing in Machine Learning and Data Mining migrated into traditional application space.
+			</p>
+          
+          </div>
+		<div class="row">
+		  <div class="col-lg-10 mx-auto">
+		     <h2>Corporate Life</h2>
+             <p class="lead mb-5">I have worked for <a href="https://www.ibm.com/in-en/">IBM India</a> close to 4 years.
+			 </br>I have been deployed on various teams while working there. I began working on apps on US Healthcare along clients like Anthem and NASCO. This is where I have gained AHM certification for domain intelligence.
+			 </br>Gradually my primary work on NodeJS and MongoDB where I had to create an application for new ICD10 patient health data aggregation. This had PHI compliant data retrieval and maintenance along with portal for the customer to view health history.
+			 </br>I was also made the Scrum Master for another healthcare project team where I had a great time aidting my team of 20 people.
+			</p>
+           </div>
+		<div class="row">
+		  <div class="col-lg-10 mx-auto">
+		     <h2>Bachelor Life</h2>
+             <p class="lead mb-5">I have a bachelor of technology degree in Computer Engineering from  <a href="http://www.svnit.ac.in/">SVNIT</a> or as other might know as NIT,Surat.
+			 </br>During these formative years of my life I have made great friends who helped nurture my love for code and for Gujarati food!
+			 </br>I was a part of the local <a href="http://nitsurat.acm.org/">ACM Chapter</a> where me and my friends had organized coding competitions, bootcamps, lectures and quizes.
+			 </br>I was also the Design Head for our college festival, AutumnFest which is one of the largest college festival west of India.
+			</p>
+           </div>
+		<div class="row">
+		  <div class="col-lg-10 mx-auto">
+		     <h2>School Life</h2>
+             <p class="lead mb-5">I have completed the majority of my secondary education from  <a href="https://www.kvongcsurat.org/">Kendriya Vidayala</a> at Surat.
+			 </br>The rest was between <a href="https://www.ryaninternational.org/">Ryan International School</a>, Surat and  <a href="https://timpanyschool.in/">Timpany School, Vishakhapatnam</a>.
+			 </br>While my primary interest was in Computer Science in secondary school indulging in C++, my hobby and skill lied in Art where I had garnered many awards to my name.
+			</p>
+           </div>
+          
+          </div>
+		  <div class="col-lg-10 mx-auto">
+            <h2>Interests</h2>
+            <p class="lead mb-5">I love to keep up with the latest tech in the news, take photos for my <a href="https://www.instagram.com/daft_wanderer/">instagram</a> feed, travel and to swim.
               <a href="https://unsplash.com/">Unsplash</a>!</p>
-            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
+            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">Projects</a>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Services -->
+    <!-- Services 
     <section class="content-section bg-primary text-white text-center" id="services">
       <div class="container">
         <div class="content-section-heading">
@@ -127,8 +162,8 @@
         </div>
       </div>
     </section>
-
-    <!-- Callout -->
+-->
+    <!-- Callout 
     <section class="callout">
       <div class="container text-center">
         <h2 class="mx-auto mb-5">Welcome to
@@ -137,7 +172,7 @@
         <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download Now!</a>
       </div>
     </section>
-
+-->
     <!-- Portfolio -->
     <section class="content-section" id="portfolio">
       <div class="container">
@@ -150,8 +185,8 @@
             <a class="portfolio-item" href="#">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Stationary</h2>
-                  <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                  <h2>Remote Package Dependency Analysis</h2>
+                  <p class="mb-0">Multi-threaded app developed on C# using WCF for communication between components and the User Interface was built using WPF.</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -161,8 +196,8 @@
             <a class="portfolio-item" href="#">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Ice Cream</h2>
-                  <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                  <h2>Predicting Box-Office Revenue using Tweets</h2>
+                  <p class="mb-0">Performed by applying multivariate regression on features found using exploratory analysis.</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -172,8 +207,8 @@
             <a class="portfolio-item" href="#">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Strawberries</h2>
-                  <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                  <h2>LeaveIT - leave tracker and analytics Java App</h2>
+                  <p class="mb-0">App interacts with employees leave tracker database to help log and update leaves.</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
@@ -183,8 +218,9 @@
             <a class="portfolio-item" href="#">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Workspace</h2>
-                  <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                  <h2>Secure Data Aggregation on Wireless Sensor Networks</h2>
+                  <p class="mb-0">Provide an energy and cost efficient algorithm to ensure authentication of every node
+through Privacy Homomorphic Algorithms.</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
@@ -197,13 +233,13 @@
     <!-- Call to Action -->
     <section class="content-section bg-primary text-white">
       <div class="container text-center">
-        <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-        <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
-        <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
+        <h2 class="mb-4">My Work can be found on</h2>
+        <a href="https://github.com/souradeepta" class="btn btn-xl btn-light mr-4">GitHub</a>
+        <a href="https://www.linkedin.com/in/souradeepta/" class="btn btn-xl btn-dark">LinkedIn</a>
       </div>
     </section>
 
-    <!-- Map -->
+    <!-- Map 
     <section id="contact" class="map">
       <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
       <br/>
@@ -211,28 +247,28 @@
         <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
       </small>
     </section>
-
+-->
     <!-- Footer -->
-    <footer class="footer text-center">
+    <footer class="footer text-center"id="footer">
       <div class="container">
         <ul class="list-inline mb-5">
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
+            <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/souradeeptab">
               <i class="icon-social-facebook"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
+            <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/souradeepta">
               <i class="icon-social-twitter"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href="#">
+            <a class="social-link rounded-circle text-white" href="https://github.com/souradeepta">
               <i class="icon-social-github"></i>
             </a>
           </li>
         </ul>
-        <p class="text-muted small mb-0">Copyright &copy; Your Website 2018</p>
+        <p class="text-muted small mb-0">Copyright &copy; Souradeepta Biswas 2018</p>
       </div>
     </footer>
 
