--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ through Privacy Homomorphic Algorithms.</p>
       </div>
     </section>
 
-    <!-- Call to Action -->
+    <!-- Call to Action 
     <section class="content-section bg-primary text-white">
       <div class="container text-center">
         <h2 class="mb-4">My Work can be found on</h2>
@@ -238,7 +238,7 @@ through Privacy Homomorphic Algorithms.</p>
         <a href="https://www.linkedin.com/in/souradeepta/" class="btn btn-xl btn-dark">LinkedIn</a>
       </div>
     </section>
-
+-->
     <!-- Map 
     <section id="contact" class="map">
       <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
@@ -252,6 +252,16 @@ through Privacy Homomorphic Algorithms.</p>
     <footer class="footer text-center"id="footer">
       <div class="container">
         <ul class="list-inline mb-5">
+		 <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-3" href="mailto:sdb.svnit@gmail.com">
+              <i class="icon-social-google"></i>
+            </a>
+          </li>
+		  <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/souradeepta">
+              <i class="icon-social-linkedin"></i>
+            </a>
+          </li>
           <li class="list-inline-item">
             <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/souradeeptab">
               <i class="icon-social-facebook"></i>
@@ -265,6 +275,11 @@ through Privacy Homomorphic Algorithms.</p>
           <li class="list-inline-item">
             <a class="social-link rounded-circle text-white" href="https://github.com/souradeepta">
               <i class="icon-social-github"></i>
+            </a>
+          </li>
+		  <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white" href="https://instagram.com/daft_wanderer/">
+              <i class="icon-social-instagram"></i>
             </a>
           </li>
         </ul>
