Contact me updated

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		  <div class="col-lg-10 mx-auto">
 		     <h2>School Life</h2>
              <p class="lead mb-5">I have completed the majority of my secondary education from  <a href="https://www.kvongcsurat.org/">Kendriya Vidayala</a> at Surat.
-			 </br>The rest was between <a href="https://www.ryaninternational.org/">Ryan International School</a>, Surat and  <a href="https://timpanyschool.in/">Timpany School, Vishakhapatnam</a>.
+			 </br>The rest was between <a href="https://www.ryaninternational.org/">Ryan International School</a>, Surat and  <a href="https://timpanyschool.in/">Timpany School</a>, Vishakhapatnam.
 			 </br>While my primary interest was in Computer Science in secondary school indulging in C++, my hobby and skill lied in Art where I had garnered many awards to my name.
 			</p>
            </div>
@@ -250,6 +250,11 @@ through Privacy Homomorphic Algorithms.</p>
 -->
     <!-- Footer -->
     <footer class="footer text-center"id="footer">
+	<div class="col-lg-10 mx-auto">
+		     <h2>Contact me</h2>
+			 </br></br>
+		
+	</div>
       <div class="container">
         <ul class="list-inline mb-5">
 		 <li class="list-inline-item">
