--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
 		  <div class="col-lg-10 mx-auto">
             <h2>Interests</h2>
             <p class="lead mb-5">I love to keep up with the latest tech in the news, take photos for my <a href="https://www.instagram.com/daft_wanderer/">instagram</a> feed, travel and to swim.
-              <a href="https://unsplash.com/">Unsplash</a>!</p>
-            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">Projects</a>
+             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">Projects</a>
           </div>
         </div>
       </div>
@@ -230,15 +229,16 @@ through Privacy Homomorphic Algorithms.</p>
       </div>
     </section>
 
-    <!-- Call to Action 
+    <!-- Call to Action -->
     <section class="content-section bg-primary text-white">
       <div class="container text-center">
-        <h2 class="mb-4">My Work can be found on</h2>
-        <a href="https://github.com/souradeepta" class="btn btn-xl btn-light mr-4">GitHub</a>
-        <a href="https://www.linkedin.com/in/souradeepta/" class="btn btn-xl btn-dark">LinkedIn</a>
+        <h2 class="mb-4">Finally my Resume</h2>
+		<a class="social-link rounded-circle text-white mr-3" href="Resume.pdf">
+              <i class="icon-location-pin"></i>
+        <a href="Resume.pdf" class="btn btn-xl btn-light mr-4">A Click Away!</a>
       </div>
     </section>
--->
+
     <!-- Map 
     <section id="contact" class="map">
       <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
