Updated proejct github links

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://github.com/souradeepta/Remote-Package-Depenedency-Analysis">
               <span class="caption">
                 <span class="caption-content">
                   <h2>Remote Package Dependency Analysis</h2>
@@ -192,7 +192,7 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://github.com/souradeepta/Predicting-Boxoffice-Revenue-using-Tweets">
               <span class="caption">
                 <span class="caption-content">
                   <h2>Predicting Box-Office Revenue using Tweets</h2>
@@ -233,8 +233,6 @@ through Privacy Homomorphic Algorithms.</p>
     <section class="content-section bg-primary text-white">
       <div class="container text-center">
         <h2 class="mb-4">Finally my Resume</h2>
-		<a class="social-link rounded-circle text-white mr-3" href="Resume.pdf">
-              <i class="icon-location-pin"></i>
         <a href="Resume.pdf" class="btn btn-xl btn-light mr-4">A Click Away!</a>
       </div>
     </section>
