--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="container text-center my-auto">
         <h1 class="mb-1">Souradeepta Biswas</h1>
         <h3 class="mb-5">
-          <em>Currently pursuing masters degree in Computer Science at Syracuse University</em>
+      <!--    <em>Currently pursuing masters degree in Computer Science at Syracuse University</em> -->
         </h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">More about me</a>
       </div>
