--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h3 class="mb-5">
       <!--    <em>Currently pursuing masters degree in Computer Science at Syracuse University</em> -->
         </h3>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">More about me</a>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About me</a>
       </div>
       <div class="overlay"></div>
     </header>
